syntax = "proto3";

option csharp_namespace = "CustomerServer";

package customers;

// The greeting service definition.
service Customers {  
  rpc AddCustomer (AddCustomerRequest) returns (AddCustomerResponse);
  rpc UpdateCustomer (UpdateCustomerRequest) returns (UpdateCustomerResponse);
  rpc GetCustomer (GetCustomerRequest) returns (CustomerResponse);
  rpc GetCustomers (GetCustomersRequest) returns (stream CustomerResponse);
  rpc DeleteCustomer (DeleteCustomerRequest) returns (DeleteCustomerResponse);  
}

// The request message containing the user's name.
message AddCustomerRequest {
  string first_name = 1;
  string last_name = 2;
  int32 age = 3;
}

message AddCustomerResponse {
	string id = 1;
}

message UpdateCustomerRequest {
	string id = 1;
	string first_name = 2;
	string last_name = 3;
	int32 age = 4;
}

message UpdateCustomerResponse {
}

message GetCustomerRequest {
	string id = 1;
}

message CustomerResponse {
	string id = 1;
	string first_name = 2;
	string last_name = 3;
	int32 age = 4;
}

message GetCustomersRequest {
}


message DeleteCustomerRequest {
	string id = 1;
}

message DeleteCustomerResponse {
}

